package com.example.logistics.builder;

public enum Hold {
    FORWARD,
    CENTER,
    AFT
}
